--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@
   added to a system header file.
 
 * Use -pedantic compilation flag in Makefile once the af_alg_aead_assoc is moved
-  to amsystem header file
+  to a system header file
 
 * Discuss with Herbert Xu whether the function pad_iv is needed: can we remove
   the check for the IV size in algif_skcipher.c.
