--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Change 0.3.0:
+ * new kernel patch for AEAD/RNG interface
+ * Support for updated AEAD kernel interface
+ * Use of NETLINK_CRYPTO instead of getsockopt (code currently disabled due to a bug
+   in crypto/crypto_user.c -- see TODO)
+
 Changes 0.2.1:
  * Add automation to generate nicely formatted guidance documents out of source code
    comments. See README.md for make targets generating the respective guidance
