--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,13 @@
+Change 0.7.0:
+ * AEAD kernel part does not relay MSG_TRUNC any more, thus using the
+   read syscall is more efficient.
+ * remove kcapi_cipher_setiv and add an IV parameter to all necessary
+   API calls. This prevents the requirement for a function call
+   and requiring the caller to maintain the IV buffer
+ * add vmsplice tests to test framework to make sure vmsplice is really
+   executed
+ * fix documentation style
+
 Change 0.6.5:
  * Measuring speed of vmsplice vs sendmsg interfaces and added heuristic
    to select the fastest implementation
