--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+Changes 0.9.1:
+ * simplify kcapi_aead_encrypt and kcapi_aead_decrypt
+ * comment out message truncation check
+
+Changes 0.9.0:
+ * Add asymmetric cipher API.
+
 Changes 0.8.0:
  * Fix test.sh to invoke large AEAD test
  * All kcapi_*_destroy functions are void now
