fix usage of splice syscall
Keep track on the number of IOVECs send to the kernel via splice.
When stepping over the bound of 16, use the sendmsg call.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Changes 0.10.1:
+ * Fix issues with the vmsplice usage in stream mode
+
 Changes 0.10.0:
  * simplify kcapi_aead_encrypt and kcapi_aead_decrypt
  * comment out message truncation check
