--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,9 @@ Changes 0.11.0:
  * Add clean and consistent logging logic
  * fixed execution when CONFIG_CRYPTO_FIPS is disabled in kernel
  * mark all symbols except API as hidden
+ * performance measurements for kcapi_md_updatn added
+ * update speed tests for newer AVX/AVX2 kernel handling
+ * update documentation to mark all parameters as [in] or [out]
 
 Changes 0.10.2:
  * Fix kernel netlink parsing error message
