--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Changes 0.12.0
+ * add version.lds
+ * add KDF API
+ * add PBKDF API
+ * update Makefile to look for environment
+
 Changes 0.11.1
  * move version information to kcapi.h to allow compile time tests for wrapping
    applications
