--- a/apps/kcapi-enc.1
+++ b/apps/kcapi-enc.1
@@ -234,4 +234,4 @@ application.
 The AEAD cipher support is currently untested.
 .PP
 .SH SEE ALSO
-\fBkcapi-dgst\fR(1)
+\fBkcapi-dgst\fR(1) \fBkcapi-rng\fR(1)
