add hint to stdrng
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/apps/kcapi-rng.1
+++ b/apps/kcapi-rng.1
@@ -65,6 +65,9 @@ chosen cipher must be of type
 .IR rng
 as marked in
 .IR /proc/crypto .
+If this option is not used, the cipher
+.IR stdrng
+is used as default.
 .TP
 \fB\-\-hex\fR
 The generated random numbers are print out in hexadecimal notation instead
