do not print out trailing CR/LF when --hex is requested
Signed-off-by: Stephan Mueller <smueller@chronox.de>

--- a/apps/kcapi-rng.1
+++ b/apps/kcapi-rng.1
@@ -78,6 +78,9 @@ Enable a verbose operation of
 .IR kcapi-rng .
 Using this option multiple times increases the verbosity.
 .TP
+\fB\-q\fR, \fB\-\-quiet\fR
+Prevent the generation of any log output.
+.TP
 \fB\-h\fR, \fB\-\-help\fR
 Display the help text.
 .TP
