--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+Changes 1.1.3
+ * Fix: default location of FIPS 140-2 HMAC control file is .<orig file>.hmac
+   (was accidentally moved to <orig file>.hmac with 1.1.2)
+
 Changes 1.1.2
  * Fix: Bug fixes for GCC 8.1.0 regarding string length checks by
 	Krzysztof Kozlowski
